<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adi.ho.jackie.espressotestingatm.MainActivity">

    <TextView
        android:id="@+id/balance_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/input_balanceedittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance_textview"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal"
        android:hint="Enter Transaction Amount."/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_balanceedittext"
        android:layout_marginTop="20dp"
        android:id="@+id/button_layout">
        <Button
            android:id="@+id/withdraw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Withdraw"
            android:onClick="withdraw"
            android:layout_weight="0.3"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deposit_button"
            android:text="Deposit"
            android:onClick="deposit"
            android:layout_weight="0.3"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/see_accnt_info_button"
            android:layout_weight="0.3"
            android:text="Accnt Info"
            android:onClick="goToAccountInfo"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/transaction_listview"
        android:layout_below="@id/button_layout"></ListView>

</RelativeLayout>
